overflow problem solved

--- a/style.css
+++ b/style.css
@@ -40,12 +40,13 @@
     grid-column-end: 5;
     border: 1px solid rgba(0, 0, 0, 0.8);
     position: relative;
+    overflow: hidden;
 }
 .bottom{
     position: absolute;
     font-size: 30px;
     right: 0px;
-    bottom:0px ;
+    bottom:0px;
 }
 .btn{
     position: relative;
